# teleport-coding-challenge

./: 0027-tcp-load-balancer.md  Cargo.toml  README.md
certs/: 01.pem  02.pem  04.pem  06.pem  07.pem  bad-server.crt  bad-server.csr  bad-server.key  client.crt  client.csr  client.key  fifth.csr  fifth.key  first.crt  first.csr  first.key  fourth.crt  fourth.csr  fourth.key  gen_client_certs.sh  gen_tls_certs.sh  index.txt  index.txt.old  openssl.cnf  second.crt  second.csr  second.key  server.crt  server.csr  server.key  server.pem  third.crt  third.csr  third.key
certs/cert/: bad-ec-cacert.pem  ec-cacert.pem
certs/private/: bad-ec-cakey.pem  ec-cakey.pem
other_certs/: 02.pem  first.csr  first.key  gen_client_certs.sh  gen_tls_certs.sh  index.txt  index.txt.old  server.crt  server.csr  server.key  server.pem
other_certs/cert/: ec-cacert.pem
other_certs/private/: ec-cakey.pem
src/: client.rs  config.rs  lib.rs  server.rs
